--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,12 @@ services:
   web:
     image: web:v1
     container_name: web
+    ports:
+    - "80:80"
     depends_on:
       - catalogue
+      - user
+      - cart
   mongodb:
     image: mongodb:v1
     container_name: mongo
@@ -13,3 +17,17 @@ services:
     container_name: catalogue
     depends_on:
       - mongodb
+  user:
+    image: user:v1
+    container_name: user
+    depends_on:
+      - mongodb
+      - redis
+  cart:
+    image: cart:v1
+    container_name: cart
+    depends_on:
+      - catalogue
+      - redis
+
+
