--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,5 +31,15 @@ services:
     depends_on:
       - catalogue
       - redis
+  mysql:
+    image: mysql:v1
+    container_name: mysql
+  shipping:
+    image: shipping:v1
+    container_name: shipping
+    depends_on:
+      - mysql
+
+
 
 
